<resources>
    <string name="app_name">Wassup</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="your_name">Your Name</string>
    <string name="password">Password</string>
    <string name="need_a_new_account">Need a new Account?</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="welcome_to_wassup">Welcome to Wassup!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_friend">Add Friend</string>
    <string name="defaultStatus">Hey there, I\'m using Wassup!</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="delete_friend_request">Delete Friend Request</string>
    <string name="mutual_firends">Mutual Firends</string>
    <string name="firends">Firends |</string>
</resources>
