<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.designstudioiitr.wassup.WelcomeActivity">

    <ImageView
        android:id="@+id/ivWelcomeScreen"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@mipmap/image_welcome_screen"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_wassup"
        android:layout_below="@+id/ivWelcomeScreen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btnLoginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWelcome"
        android:layout_centerHorizontal="true"
        android:text="@string/already_have_account"
        android:layout_marginTop="75dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        />


    <Button
        android:id="@+id/btnRegisterPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLoginPage"
        android:layout_centerHorizontal="true"
        android:text="@string/need_a_new_account"
        android:layout_marginTop="15dp"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        />

</RelativeLayout>
